--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_riverpod: ^2.4.10
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
@@ -63,10 +64,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/fonts/
-    - assets/icons/
+  # - assets/icons/
     - assets/images/
     - assets/langs/
-    - assets/svgs/
+  # - assets/svgs/
     - assets/native_icons/launch_icons/
     - assets/native_icons/splash_icons/
   # assets:
