--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/fonts/
-  # - assets/icons/
+    - assets/icons/
     - assets/images/
     - assets/langs/
   # - assets/svgs/
