profile section upgrade option done + refer a business option one screen done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,9 @@ flutter:
     - family: WorkSans
       fonts:
         - asset: assets/fonts/WorkSans-Regular.ttf
+    - family: roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Medium.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
