--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   card_swiper: ^3.0.1
   dots_indicator: ^2.1.1
+  syncfusion_flutter_charts: ^25.1.35
 
 dev_dependencies:
   flutter_test:
