--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   card_swiper: ^3.0.1
   dots_indicator: ^2.1.1
   syncfusion_flutter_charts: ^25.1.35
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
