--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,12 @@
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+ <uses-feature
+    android:name="android.hardware.camera"
+    android:required="true"/>
+  <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.CAMERA"/>
+  <uses-permission android:name="android.permission.FLASHLIGHT"/>
     <application
         android:label="etbank_business_app"
         android:name="${applicationName}"
